Coded the page per design comp specifications, mobile first code complete

--- a/index.html
+++ b/index.html
@@ -33,15 +33,13 @@
   <body>
     <!-- Add your site or application content here -->
     <header>
-
+      <div class="hidden-places">
+        <h1>Discover Hidden Places in the World Around You</h2>
+      </div>
     </header>
     <main class="container-wrapper">
       <section>
-        <div class="hidden-places">
-          <h1>Discover Hidden Places in the World Around You</h1>
-        </div>
-        <div>
-          <h3><span>Download Excursion (coming soon!)</span></h3>
+          <h5><span>Download Excursion (coming soon!)</span></h5>
         </div>
           <div>
             <video autoplay loop muted playsinline>
@@ -50,9 +48,9 @@
             </video>
           </div> 
       </section>
-      <section>
-        <div class="travel-guide">
-          <h1>Your Personal Travel Guide</h1>
+      <section class="travel-guide">
+        <div>
+          <h2>Your Personal Travel Guide</h2>
         </div>
         <div>
           <h3>Excursion remembers places you like, and recommends new points of interest around you</h3>
@@ -63,24 +61,24 @@
           </figure> 
         </div>
       </section>
-      <section>
-        <div class="coming-soon">
+      <section class="coming-soon">
+        <div >
           <p class="fontawesome-icon">
-            <i class="fas fa-mobile-alt"></i>
+            <i class="fas fa-mobile-alt fa-5x"></i>
           </p>
         </div>
         <div>
-          <h1>Coming Soon for iPhone and Android</h1>
+          <h2>Coming Soon for iPhone and Android</h2>
         </div>
         <div>
-          <h3><span>Download Excursion (coming soon!)</span></h3>
+          <h5><span>Download Excursion (coming soon!)</span></h5>
         </div>
       </section>
 
     </main>
     <footer>
       <div class="copyright"> 
-        <p>Excursion</p>
+        <p>&#169 Excursion</p>
       </div> 
     </footer>
     
@@ -92,10 +90,10 @@
     <script>
       window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
       ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-    /*
+    
       </script>
     <script src="https://www.google-analytics.com/analytics.js" async>
-    </script> */
+    </script>
   </body>
 
 </html>
