--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
           <div>
             <video autoplay loop muted playsinline>
-              <source src="img/excursion.mp4" type="video/mp4" />
+              <source src="videos/excursion.mp4" type="video/mp4" />
                Excursion Locations Videos 
             </video>
           </div> 
